:add adress add and li

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h2> Contact </h2>
              <li> Télephone <br> 06-44-72-28-71<br/> </li>
              <li>Email <br> briardnohapro@gmail.com<br/></li>
-             <li><a href="www.linkedin.com/in/👨🏾noha-👨🏾briard-28a03b322"> linkedin</a> </li>
+             <li><a href="www.linkedin.com/in/👨🏾‍💻noha-👨🏾‍💻briard-28a03b322"> linkedin</a> </li>
             
 
 
